--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="/js/form.js" defer></script>
 </head>
 <body>
 <div class="todo-content">
@@ -14,7 +15,7 @@
     <div class="todo-create">
         <form id="todo-form">
             <input type="text"
-                   id="title"
+                   id="today-task"
                    class="form-control"
                    placeholder="오늘 할 일을 입력한 후 엔터를 누르세요..."
                    required>
