--- a/src/main/resources/templates/task/index.mustache
+++ b/src/main/resources/templates/task/index.mustache
@@ -9,6 +9,7 @@
             <div class="icons">
                 <!-- 수정 Modal 트리거 -->
                 <i class="material-icons edit-btn"
+                   id="edit-btn"
                    data-bs-toggle="modal"
                    data-bs-target="#edit-modal"
                    data-bs-id="{{id}}"
