To-Do-List To-Do 삭제 구현

--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -12,6 +12,7 @@
     <script src="/js/post.js" defer></script>
     <script src="/js/patch.js" defer></script>
     <script src="/js/modal.js" defer></script>
+    <script src="/js/delete.js" defer></script>
 </head>
 <body>
 <div class="todo-content">
