--- a/src/main/resources/templates/task/index.mustache
+++ b/src/main/resources/templates/task/index.mustache
@@ -16,7 +16,11 @@
                    data-bs-todo="{{todayTask}}"
                    style="cursor:pointer;">edit</i>
 
-                <i class="material-icons delete-btn" style="cursor:pointer;">clear</i>
+                <!-- 삭제 버튼 -->
+                <i class="material-icons delete-btn"
+                   id="delete-btn"
+                   data-bs-id="{{id}}"
+                   style="cursor:pointer;">clear</i>
             </div>
         </li>
     </ul>
