--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -13,6 +13,7 @@
     <script src="/js/patch.js" defer></script>
     <script src="/js/modal.js" defer></script>
     <script src="/js/delete.js" defer></script>
+    <script src="/js/checkbox.js" defer></script>
 </head>
 <body>
 <div class="todo-content">
