--- a/src/main/resources/templates/layouts/footer.mustache
+++ b/src/main/resources/templates/layouts/footer.mustache
@@ -1,6 +1,8 @@
     <div class="todo-footer">
+        <!-- checked counter-->
         <span id="todo-selected-count"></span>
-
+        <i class="material-icons checked-delete-btn"
+           id="checked-delete-btn">delete</i>
     </div>
 </body>
 </html>
