delete 삭제 완료 alert 제거

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,6 +59,10 @@ input {
   animation: none;
 }
 
+#edit-modal, #edit-modal * {
+    animation:none;
+}
+
 .form-control {
   font-size: 12px;
   padding-left: 15px;
@@ -187,7 +191,6 @@ i:focus {
     opacity: 1;
   }
 }
-
 
 .text-focus-in {
 	-webkit-animation: text-focus-in 2.3s 1s both;
